# project-fairness-interpretability

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
config/: config_data.py  config_modeling.py  dict.yaml  dict_hard.yaml
models/: ANN.pkl  Decision_Tree.pkl  GAM.pkl  Logistic_Regression.pkl  Random_Forest.pkl  XGB.pkl
notebooks/: EDA.ipynb  Global_explanation.ipynb  explore_datasources.ipynb  fairness_PDP.ipynb  global_post_hoc_explanation.ipynb  grouping_analysis.ipynb  lime_exploration.ipynb  nlp_feature_extraction.ipynb  pdp.ipynb  shap_exploration.ipynb  statistical_parity.ipynb  surrogate_method.ipynb  xper.ipynb
notebooks/data_exploration/: EDA.ipynb  explore_datasources.ipynb  grouping_analysis.ipynb
notebooks/explanation/: global_post_hoc.ipynb  lime.ipynb  performance.ipynb  shap.ipynb  surrogate_method.ipynb
notebooks/fairness/: fairness_PDP.ipynb  statistical_parity.ipynb
src/: main.py  modeling.py
src/data_preprocessing/: create_data_split.py  data_preprocessor.py  main.py
src/explanation/global_/: ale_explainer.py  pdp_explainer.py  utils.py
src/explanation/global_exp/: post_hoc_methods.py
src/explanation/local/: base.py  lime_explainer.py  shap_explainer.py  utils.py
src/explanation/performance/: permutation_importance.py  xper.py
src/explanation/performane/: performance.py
src/fairness/: FPDP.py  statistical_parity.py
src/modeling/: create_data_split.py  evaluation.py  inference.py  main.py  training.py
src/utils/: models_pkl.py  pdp.py
